--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,161 @@
-dvc
+absl-py==0.13.0
+aiohttp==3.7.4.post0
+aiohttp-retry==2.4.6
+altair==4.1.0
+appdirs==1.4.4
+argon2-cffi==21.1.0
+astor==0.8.1
+astunparse==1.6.3
+async-timeout==3.0.1
+atpublic==2.3
+backports.zoneinfo==0.2.1
+base58==2.1.0
+black==19.10b0
+bleach==4.1.0
+blinker==1.4
+boto3==1.18.63
+botocore==1.21.63
+cachetools==4.2.2
+certifi==2021.5.30
+cffi==1.14.6
+chardet==4.0.0
+click==7.1.2
+commonmark==0.9.1
+configobj==5.0.6
+cycler==0.10.0
+defusedxml==0.7.1
+dictdiffer==0.9.0
+diskcache==5.2.1
+distlib==0.3.1
+distro==1.6.0
+dpath==2.0.5
+dulwich==0.20.25
+dvc==2.8.1
+entrypoints==0.3
+flatbuffers==1.12
+flatten-dict==0.4.2
+flufl.lock==3.2
+fsspec==2021.10.1
+ftfy==6.0.3
+funcy==1.16
+future==0.18.2
+gast==0.3.3
+gitdb==4.0.7
+GitPython==3.1.18
+google-auth==1.32.1
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+grandalf==0.6
+grpcio==1.32.0
+gTTS==2.2.3
+h5py==2.10.0
+idna==2.10
+ipykernel 
+ipython 
+ipython-genutils 
+ipywidgets==7.6.4
+Jinja2==3.0.1
+jmespath==0.10.0
+joblib==1.0.1
+jsonschema==3.2.0
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.1
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+mailchecker==4.0.12
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+mistune==0.8.4
+multidict==5.2.0
+mypy-extensions==0.4.3
+nanotime==0.5.2
+nbclient==0.5.4
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.6.3
+nltk==3.6.2
+notebook==6.4.3
+numpy==1.19.5
+oauthlib==3.1.1
+opencv-python==4.5.3.56
+opt-einsum==3.3.0
+packaging==21.0
+pandas==1.3.1
+pandocfilters==1.4.3
+pathspec==0.7.0
+phonenumbers==8.12.35
+Pillow==8.3.1
+ply==3.11
+prometheus-client==0.11.0
+protobuf==3.17.3
+psutil==5.8.0
+pyarrow==5.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pydeck==0.7.0
+pydot==1.4.2
+pygit2==1.7.0
+pygtrie==2.4.2
+pyrsistent==0.18.0
+python-benedict==0.24.3
+python-fsutil==0.5.0
+python-slugify==5.0.2
+pytz==2021.1
+pywin32==228
+pywinpty==1.1.4
+PyYAML==6.0
+pyzmq==20.0.0
+requests==2.25.1
+requests-oauthlib==1.3.0
+rich==10.12.0
+rsa==4.7.2
+ruamel.yaml==0.17.16
+ruamel.yaml.clib==0.2.6
+s3transfer==0.5.0
+scikit-learn==0.24.2
+scipy==1.6.3
+seaborn==0.11.1
+Send2Trash==1.8.0
+shortuuid==1.0.1
+shtab==1.4.2
+six==1.15.0
+sklearn==0.0
+smmap==4.0.0
+streamlit==0.88.0
+tabulate==0.8.9
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow-estimator==2.4.0
 tensorflow-gpu==2.4.0
-matplotlib
-numpy
-pandas
-tqdm
-PyYAML
-boto3
+termcolor==1.1.0
+terminado==0.11.1
+testpath==0.5.0
+text-unidecode==1.3
+threadpoolctl==2.2.0
+toolz==0.11.1
+tqdm==4.62.0
+typing-extensions==3.7.4.3
+tzdata==2021.1
+tzlocal==3.0
+urllib3==1.26.6
+validators==0.18.2
+virtualenv==20.0.35
+voluptuous==0.12.2
+watchdog==2.1.5
+webencodings==0.5.1
+Werkzeug==2.0.1
+widgetsnbextension==3.5.1
+win-unicode-console==0.5
+wincertstore==0.2
+wrapt==1.12.1
+xmltodict==0.12.0
+yarl==1.7.0
+zc.lockfile==2.0
+
+# local
+-e .
