--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,7 @@
 artifacts:
   DIR: artifacts
   TRAINED_MODEL_DIR: model
-  BASE_MODEL_NAME: base
+  BASE_MODEL_DIR: base
   BASE_MODEL_NAME: VGG16_base_model.h5
   FINETUNED_MODEL_DIR: finetuned
   TENSORBOARD_LOGS_DIR: tensorboard_logs
